exercice première appli, utilisation switch case

--- a/css/liste.css
+++ b/css/liste.css
@@ -64,3 +64,9 @@ tr, td {
     padding: 0.5em;
 }
 
+/************************************** Formulaire ************************************************/
+.totalProducts p {
+    padding: 1em;
+    color: #333;
+    font-size: 2em;
+}
